2025-08-23T00:51:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17169089611 # 744
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-23
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 604 998 / 619 1013
* notice: next accum: outdated-unq outdated-all / unq all: 605 999 / 620 1014
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-08] / [2025-08-22]

2025-08-22T00:54:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17142950511 # 743
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-22
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 603 997 / 612 1006
* notice: next accum: outdated-unq outdated-all / unq all: 604 998 / 619 1013
* notice: prev exec diff / last date diff / accum: unq all: +7 +7 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-07] / [2025-08-15 2025-08-16 2025-08-17 2025-08-18 2025-08-19 2025-08-21]

2025-08-21T00:53:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17114055333 # 742
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-21
* notice: last 14d: unq all: 3 9
* notice: prev accum: outdated-unq outdated-all / unq all: 602 996 / 612 1006
* notice: next accum: outdated-unq outdated-all / unq all: 603 997 / 612 1006
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-06] / []

2025-08-20T00:53:51Z: