@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-08-23T00:51:51Z",
-  "count_outdated" : 999,
-  "uniques_outdated" : 605,
-  "count" : 1014,
-  "uniques" : 620,
+  "timestamp" : "2025-08-24T01:00:04Z",
+  "count_outdated" : 1000,
+  "uniques_outdated" : 606,
+  "count" : 1015,
+  "uniques" : 621,
   "clones" : [
     {
-      "timestamp": "2025-08-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2025-08-10T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-08-11T00:00:00Z",
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2025-08-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
