@@ -1,16 +1,11 @@
 {
-  "count": 15,
+  "count": 14,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-08-09T00:00:00Z",
+      "timestamp": "2025-08-10T00:00:00Z",
       "count": 1,
       "uniques": 1
-    },
-    {
-      "timestamp": "2025-08-10T00:00:00Z",
-      "count": 2,
-      "uniques": 2
     },
     {
       "timestamp": "2025-08-11T00:00:00Z",
@@ -64,6 +59,11 @@
     },
     {
       "timestamp": "2025-08-22T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-08-23T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
