@@ -1,3 +1,12 @@
+2025-08-24T01:00:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17182183731 # 745
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-24
+* notice: last 14d: unq all: 4 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 605 999 / 620 1014
+* notice: next accum: outdated-unq outdated-all / unq all: 606 1000 / 621 1015
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-08-09] / [2025-08-10 2025-08-23]
+
 2025-08-23T00:51:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17169089611 # 744
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-23
